log/build_2026-02-03_20-57-50/aurora_gps/stdout_stderr.log
running egg_info
writing ../../build/aurora_gps/aurora_gps.egg-info/PKG-INFO
writing dependency_links to ../../build/aurora_gps/aurora_gps.egg-info/dependency_links.txt
writing entry points to ../../build/aurora_gps/aurora_gps.egg-info/entry_points.txt
writing requirements to ../../build/aurora_gps/aurora_gps.egg-info/requires.txt
writing top-level names to ../../build/aurora_gps/aurora_gps.egg-info/top_level.txt
reading manifest file '../../build/aurora_gps/aurora_gps.egg-info/SOURCES.txt'
writing manifest file '../../build/aurora_gps/aurora_gps.egg-info/SOURCES.txt'
running build
running build_py
copying aurora_gps/aurora_gps.py -> /home/aurora/aurora_sim_v2/build/aurora_gps/build/lib/aurora_gps
running install
running install_lib
copying /home/aurora/aurora_sim_v2/build/aurora_gps/build/lib/aurora_gps/aurora_gps.py -> /home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps
byte-compiling /home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps/aurora_gps.py to aurora_gps.cpython-310.pyc
  File "/home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps/aurora_gps.py", line 27
    self.timer = self.create_timer(0.1, self.gps_callback)
    ^^^^
SyntaxError: expected 'except' or 'finally' block

running install_data
running install_egg_info
removing '/home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/aurora_gps/aurora_gps.egg-info to /home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/aurora/aurora_sim_v2/build/aurora_gps/install.log'
